# rusty-art

./: Cargo.toml
ch_00/src/: gaussian.rs  perlin.rs  perlin_spiral.rs  random_bins.rs  random_walk.rs
ch_01/src/: acceleration.rs  bouncing_ball.rs
ch_02/src/: electric_force.rs  n_body.rs
ch_03/src/: pendulum.rs
ch_05/src/: agents.rs  flock.rs  flock_without_target.rs  lightning.rs  lightning_without_target.rs
ch_07/src/: ca_01.rs  ca_02.rs
ch_08/src/: mandlebrot.rs
ga/src/: color_utils.rs  image_gen.rs
particles/src/: particles.rs
