[package]
name = "noc"
version = "0.1.0"
edition = "2021"

[dependencies]
nannou = "0.19.0"
rand = "0.8.5"
rand_distr = "0.4.3"
rapier2d = { version = "0.23.0", features = [ "simd-stable" ] }
nalgebra = { version = "0.33.2", features = [ "convert-glam017" ]}
itertools = "0.14.0"

[[bin]]
name = "random_walk"
path = "ch_00/src/random_walk.rs"
[[bin]]
name = "perlin"
path = "ch_00/src/perlin.rs"
[[bin]]
name = "perlin_spiral"
path = "ch_00/src/perlin_spiral.rs"
[[bin]]
name = "gaussian"
path = "ch_00/src/gaussian.rs"
[[bin]]
name = "random_bins"
path = "ch_00/src/random_bins.rs"
[[bin]]
name = "bouncing_ball"
path = "ch_01/src/bouncing_ball.rs"
[[bin]]
name = "acceleration"
path = "ch_01/src/acceleration.rs"
[[bin]]
name = "n_body"
path = "ch_02/src/n_body.rs"
[[bin]]
name = "particles"
path = "particles/src/particles.rs"
