[package]
name = "noc"
version = "0.1.0"
edition = "2021"

[dependencies]
nannou = "0.19.0"
rand = "0.8.5"
rand_distr = "0.4.3"
rayon = "1.10.0"
rapier2d = { version = "0.23.0", features = [ "simd-stable" ] }
nalgebra = { version = "0.33.2", features = [ "convert-glam017" ]}
itertools = "0.14.0"
image = "0.25.6"
[dependencies.uuid]
version = "1.15.1"
features = [
    "v4",
]

[[bin]]
name = "random_walk"
path = "ch_00/src/random_walk.rs"
[[bin]]
name = "perlin"
path = "ch_00/src/perlin.rs"
[[bin]]
name = "perlin_spiral"
path = "ch_00/src/perlin_spiral.rs"
[[bin]]
name = "gaussian"
path = "ch_00/src/gaussian.rs"
[[bin]]
name = "random_bins"
path = "ch_00/src/random_bins.rs"
[[bin]]
name = "bouncing_ball"
path = "ch_01/src/bouncing_ball.rs"
[[bin]]
name = "acceleration"
path = "ch_01/src/acceleration.rs"
[[bin]]
name = "n_body"
path = "ch_02/src/n_body.rs"
[[bin]]
name = "electric_force"
path = "ch_02/src/electric_force.rs"
[[bin]]
name = "pendulum"
path = "ch_03/src/pendulum.rs"
[[bin]]
name = "particles"
path = "particles/src/particles.rs"
[[bin]]
name = "agents"
path = "ch_05/src/agents.rs"
[[bin]]
name = "flock"
path = "ch_05/src/flock.rs"
[[bin]]
name = "flock_without_target"
path = "ch_05/src/flock_without_target.rs"
[[bin]]
name = "lightning"
path = "ch_05/src/lightning.rs"
[[bin]]
name = "lightning_without_target"
path = "ch_05/src/lightning_without_target.rs"
[[bin]]
name = "ca_1"
path = "ch_07/src/ca_01.rs"
[[bin]]
name = "ca_2"
path = "ch_07/src/ca_02.rs"
[[bin]]
name = "mandlebrot"
path = "ch_08/src/mandlebrot.rs"
